# girg_diameter

./: .gitignore  README.md  experiments.py  plotting.ipynb
cluster_fin/: branching.csv  diameter_exact.csv  girg_attributes.csv
cluster_out/: diameter_exact.csv  girg_attributes.csv
code/: CMakeLists.txt
code/cli/: branching.cpp  diameter_exact.cpp  ecc_samples.cpp  prepare_graph_formats.cpp
code/include/diameter/: exact.hpp
code/include/stats/: ecc_stats.hpp
code/src/diameter/: exact.cpp
code/src/stats/: ecc_stats.cpp
